# abrasel-monitor-legislativo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: keywords.yaml
migrations/: env.py
scripts/: init_local.sh
src/abrasel_monitor/: __init__.py  cli.py  database.py  models.py  orchestrator.py  settings.py
src/abrasel_monitor/_shared/: __init__.py  checkpoint.py  http_client.py  logging.py  s3.py
src/abrasel_monitor/alertas/: __init__.py  engine.py
src/abrasel_monitor/collectors/: __init__.py  assembleias.py  base.py  camara.py  senado.py
src/abrasel_monitor/dashboard/: __init__.py  app.py
src/abrasel_monitor/etl/: __init__.py  pipeline.py
src/abrasel_monitor/parlamentares/: __init__.py  alignment.py
src/abrasel_monitor/scoring/: __init__.py  engine.py
terraform/: main.tf
tests/: __init__.py  test_alignment.py  test_collectors.py  test_scoring.py
