[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abrasel-monitor-legislativo"
version = "1.0.0"
description = "Robo de Monitoramento Parlamentar para o Setor de Alimentacao Fora do Lar - Abrasel"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Abrasel - Equipe de Dados" },
]

dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "boto3>=1.34",
    "rich>=13.0",
    "typer>=0.12",
    "structlog>=24.0",
    "tenacity>=8.0",
    "polars>=0.20",
    "pandas>=2.2",
    "jinja2>=3.1",
    "scrapy>=2.11",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "slack-sdk>=3.27",
    "streamlit>=1.30",
    "plotly>=5.18",
    "apscheduler>=3.10",
    "mcp-brasil>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "moto[s3,ses,dynamodb]>=5.0",
]

[project.scripts]
abrasel-monitor = "abrasel_monitor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/abrasel_monitor"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
